[tool.poetry]
name = "chootube"
version = "0.1.0"
description = "Simplify the interaction with the YouTube API."
authors = ["Wessel Vonk <wjc.vonk@gmail.com>"]
readme = "README.md"
packages = [{include = "chootube", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.95.0"
google-auth-oauthlib = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
